# neptune-cli-python

./: .editorconfig  .gitignore  CLAUDE.md  Dockerfile  README.md  install.ps1  install.sh  mcp.json.example  mise.toml  neptune.spec  pyproject.toml  runtime_hook.py
.github/workflows/: docker.yml
docs/: mcp_installation_guide.md
scripts/: build.sh  bump_version.py
src/neptune_cli/: cli.py  client.py  config.py  mcp.py  mcp_instructions.md  types.py  ui.py  upgrade.py  utils.py  version.py
src/neptune_cli/commands/: __init__.py  delete.py  deploy.py  dockerfile_cmd.py  generate.py  init.py  lint.py  list.py  logs.py  resource.py  schema.py  status.py  wait.py
src/neptune_cli/services/: __init__.py  deploy.py  generate.py  lint.py  logs.py  project.py  resources.py  schema.py
src/neptune_mcp/: cli.py  client.py  config.py  mcp.py
