[project]
name = "neptune-cli"
version = "0.1.0"
description = "CLI for Neptune (neptune.dev)"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
	"click>=8.1.0",
	"fastmcp>=2.13.0.2",
	"loguru>=0.7.3",
	"pydantic-settings>=2.11.0",
	"requests>=2.32.5",
	"platformdirs>=4.5.0",
]
authors = [
    { name = "Neptune CLI contributors" }
]
maintainers = [
    { name = "Neptune" }
]
keywords = ["cloud", "ifc", "deployment", "infrastructure", "devops", "cli"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.13",
    "Environment :: Console",
    "Natural Language :: English",
    "Topic :: System :: Software Distribution"
]

[project.optional-dependencies]
dev = [
	"pytest",
]

[tool.uv.sources]
neptune-common = { path = "./neptune-api" }

[dependency-groups]
dev = [
    "ruff>=0.14.6",
]

[project.scripts]
neptune = "neptune_cli.cli:cli"

[tool.ruff]
target-version = "py313" # Align with the project requirements
line-length = 120  # Align with .editorconfig

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
exclude = [
    "**/test_*.py",
    "/.github",
    "uv.lock",
    ".editorconfig",
    ".gitmodules",
    "/.venv",
]

[tool.hatch.build.targets.wheel]
packages = [
    "neptune-api/src/neptune_common",
    "src/neptune_cli"
]
